tg-5792 [MEJORA]  Se visualiza de manera incorrecta card "Signos Vitales"

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup-enfermeria/nueva-consulta-dock-popup-enfermeria.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup-enfermeria/nueva-consulta-dock-popup-enfermeria.component.html
@@ -79,7 +79,7 @@
 					<ng-container concept-form>
 						<form fxLayout="column" fxLayoutGap="10px"
 							[formGroup]="signosVitalesNuevaConsultaService.getForm()">
-							<div fxLayout="row wrap" fxFlex="100%" fxLayoutGap="5px" fxLayout.lt-lg="column">
+							<div fxFlex="100%" fxLayoutGap="5px" fxLayout.lt-lg="column">
 								<div class="signos-vitales-field" formGroupName="heartRate">
 									<mat-label
 										[translate]="'ambulatoria.paciente.nueva-consulta.signos-vitales.HEART_RATE'">
@@ -108,7 +108,7 @@
 								</div>
 							</div>
 
-							<div fxLayout="row wrap" fxFlex="100%" fxLayout.lt-lg="column">
+							<div fxFlex="100%" fxLayout.lt-lg="column">
 								<div class="signos-vitales-field" formGroupName="temperature">
 									<mat-label
 										[translate]="'ambulatoria.paciente.nueva-consulta.signos-vitales.TEMPERATURE'">
@@ -137,7 +137,7 @@
 								</div>
 							</div>
 
-							<div fxLayout="row wrap" fxFlex="100%" fxLayout.lt-lg="column">
+							<div fxFlex="100%" fxLayout.lt-lg="column">
 								<div class="signos-vitales-field" formGroupName="systolicBloodPressure">
 									<mat-label
 										[translate]="'ambulatoria.paciente.nueva-consulta.signos-vitales.SYSTOLIC_BLOOD_PRESSURE'">
