--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -424,7 +424,7 @@
 				<app-document-section class="margin-bottom">
 					<ng-container concept-form>
 						<form fxLayout="column" fxLayoutGap="10px" [formGroup]="signosVitalesNuevaConsultaService.getForm()">
-							<div fxLayout="row wrap" fxFlex="100%" fxLayoutGap="5px" fxLayout.lt-lg="column">
+							<div fxFlex="100%" fxLayoutGap="5px" fxLayout.lt-lg="column">
 								<div class="signos-vitales-field" formGroupName="heartRate">
 									<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.signos-vitales.HEART_RATE'"></mat-label>
 									<div fxLayout="row" fxLayoutAlign="between center">
@@ -467,7 +467,7 @@
 								</div>
 							</div>
 
-							<div fxLayout="row wrap" fxFlex="100%" fxLayout.lt-lg="column">
+							<div fxFlex="100%" fxLayout.lt-lg="column">
 								<div class="signos-vitales-field" formGroupName="temperature">
 									<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.signos-vitales.TEMPERATURE'"></mat-label>
 									<div fxLayout="row" fxLayoutAlign="between center">
@@ -510,7 +510,7 @@
 								</div>
 							</div>
 
-							<div fxLayout="row wrap" fxFlex="100%" fxLayout.lt-lg="column">
+							<div fxFlex="100%" fxLayout.lt-lg="column">
 								<div class="signos-vitales-field" formGroupName="systolicBloodPressure">
 									<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.signos-vitales.SYSTOLIC_BLOOD_PRESSURE'"></mat-label>
 									<div fxLayout="row" fxLayoutAlign="between center">
