tg-5782 [MEJORA] El botón "Agregar otro Procedimiento" debe verse con puntero y sombreado.

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth-dialog/tooth-dialog.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth-dialog/tooth-dialog.component.html
@@ -55,9 +55,12 @@
 				[options]="filteredProceduresTypeahead" (selectionChange)="thirdProcedureChanged($event)">
 			</app-typeahead>
 		</div>
-		<span
+		<button
 			[ngClass]="{'activate-button': (!showActionsService?.getIsNotPreviousProcedureSet() && !selectedSurfaces.length), 'disable-button': (showActionsService?.getIsNotPreviousProcedureSet() || selectedSurfaces.length)}"
-			(click)="addTypeaheadProcedure()" style="font-size: 14px;"> + Agregar otro procedimiento:</span>
+			mat-button type="button" onclick="this.blur()" (click)="addTypeaheadProcedure()" color="primary"
+			style="font-size: 14px;">
+			+ Agregar otro procedimiento:
+		</button>
 	</div>
 
 	<mat-dialog-actions fxLayoutAlign="end end">
