--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/components/triage/triage.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/components/triage/triage.component.html
@@ -18,5 +18,9 @@
 				{{office.description}}
 			</mat-option>
 		</mat-select>
+		<button id="clear_triage_room" type="button" mat-button *ngIf="triageForm.value.doctorsOfficeId" matSuffix
+			color="warn" mat-icon-button (click)="clear(triageForm.controls.doctorsOfficeId); $event.stopPropagation()">
+			<mat-icon>close</mat-icon>
+		</button>
 	</mat-form-field>
 </form>
