tg-5970 [FE] Modifica los select pertenecientes a Internación

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/internacion/components/nota-evolucion-form/nota-evolucion-form.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/internacion/components/nota-evolucion-form/nota-evolucion-form.component.html
@@ -278,6 +278,10 @@
 									{{ bloodType.description }}
 								</mat-option>
 							</mat-select>
+							<button id="clear_blood_type" type="button" mat-button *ngIf="form.value.anthropometricData.bloodType" matSuffix
+								color="warn" mat-icon-button (click)="clearBloodType(form.controls.anthropometricData); $event.stopPropagation()">
+								<mat-icon>close</mat-icon>
+							</button>
 						</mat-form-field>
 					</div>
 					<div>
