tg-5978 [FE] Modifica select perteneciente a Gestión de Turnos

--- a/front-end/apps/projects/hospital/src/app/modules/turnos/components/select-agenda/select-agenda.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/components/select-agenda/select-agenda.component.html
@@ -30,6 +30,10 @@
 				</mat-option>
 			</mat-optgroup>
 		</mat-select>
+		<button id="clear_agenda_selected" type="button" mat-button *ngIf="agendaSelected" matSuffix
+			color="warn" mat-icon-button (click)="clear(agendaSelected); $event.stopPropagation()">
+			<mat-icon>close</mat-icon>
+		</button>
 	</mat-form-field>
 
 	<div class="actions" *ngIf="agendaSelected" fxLayout="row" fxLayoutGap="3px">
