--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -766,11 +766,13 @@
 			</app-document-section-table>
 		</div>
 
-		<div id="validations" *ngIf="!isValidConsultation() || apiErrors.length > 0">
-			<mat-card>
-				<mat-error *ngFor="let error of errores" class="mat-body-2">{{ error | translate }}</mat-error>
-				<mat-error class="mat-body-2" *ngFor="let error of apiErrors">{{ error }}</mat-error>
-			</mat-card>
+		<div #errorsView>
+			<div id="validations" *ngIf="!isValidConsultation() || apiErrors.length > 0">
+				<mat-card>
+					<mat-error *ngFor="let error of errores" class="mat-body-2">{{ error | translate }}</mat-error>
+					<mat-error class="mat-body-2" *ngFor="let error of apiErrors">{{ error }}</mat-error>
+				</mat-card>
+			</div>
 		</div>
 
 	</div>
